src/objects/HISTORICO_CALL__c.object
<CustomObject>
    <fields>
        <fullName>HC_CAS_ISDELETED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Borrado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HC_DAT_CREATED_DATE__c</fullName>
        <description>Fecha del registro histórico</description>
        <label>Fecha creación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HC_TXA_NEWVALUE__c</fullName>
        <label>Nuevo Valor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HC_TXT_CREATED_BY__c</fullName>
        <description>usuario que dió de alta el registro historico</description>
        <label>Creado Por</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_TXT_FIELD__c</fullName>
        <label>HC_TXT_FIELD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_TXT_HISTORYID__c</fullName>
        <label>Id del historico</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_TXT_ID_SALESFORCE__c</fullName>
        <description>Almacena el id de salesforce del registro modificado</description>
        <label>Id Salesforce</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_TXT_OBJECT__c</fullName>
        <label>Objeto</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_TXT_OLDVALUE__c</fullName>
        <label>Valor anterior</label>
        <type>TextArea</type>
    </fields>
    <label>Histórico Call</label>
    <nameField>
        <label>Historico Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Históricos Call</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>